syntax = "proto3";

package grpc;

import "google/api/annotations.proto";
// import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "grpc/grpcpb";

message GetProductsRequest {
	int32 Id = 1;
	string Name = 2;
	ItemType ItemType = 3;
	int32 Page = 4;
	int32 Size = 5;
}

message GetProductsResponse {
	repeated Item items = 1;
}

enum ItemType {
	DEFAULT = 0;
	CAFFE = 1;
	TEA = 2;
	CAKE = 3;
}

message Item {
  	int32 Id = 1;
	string Name = 2;
	int32 Price = 3;
	ItemType Type = 4;
	string Image = 5;
}


service ProductService {

    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {
		option (google.api.http) = {
			get: "/v1/api/products"
		};
	}
}